--- a/index.html
+++ b/index.html
@@ -5,65 +5,132 @@
   <meta charset="UTF-8">
   <title>Casa Criativa</title>
 
-  <style>
-    body {
-      background: #e5e5e5;
-      color: #25282B;
-      text-align: center;
-      font-family: Calibri;
-    }
-
-    button {
-      color: #ff5E84;
-      border: none;
-      font-weight: bold;
-      background: none;
-    }
-
-    button.fat {
-      color: white;
-      background: #ff5E84;
-    }
-
-    #footer a {
-      color: #ff5E84;
-      text-decoration: none;
-    }
-
-    .hide {
-      display: none;
-    }
-  </style>
-
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <img src="logoCasaCriativa.png" alt="Imagem da Logomarca">
 
-  <p>Ficar em casa em períodos longos, não deve ser nada fácil.</p>
-  <p>Iremos catalogar ideias, <strong>brincadeiras, jogos, filmes, livros, cursos, dicas</strong> e tudo que for
-    necessário para tornar esse momento mais interessante.</p>
-  <p>Comece clicando em ver ideias para ver as <a href=""></a> ideias cadastradas e contribua adicionando a sua ideia.
-  </p>
+  <div id="container">
 
-  <button>+ Adicionar Ideia</button>
-  <button class="fat">Ver Ideias</button>
+    <section id="intro">
+      <header>
 
-  <p id="footer">Com ❤ <a href="http://rocketseat.com.br">Rocketseat</a></p>
+        <img src="logoCasaCriativa.png" alt="Imagem da Logomarca">
 
-  <script>
+      </header>
 
-    document
-      .querySelector('button.fat')
-      .addEventListener('click', function(){
-        document.querySelector('#footer')
-          .classList
-          .toggle('hide')
-      });
+      <main>
+        <p>Ficar em casa em períodos longos, não deve ser nada fácil.</p>
+        <p>Iremos catalogar ideias, <strong>brincadeiras, jogos, filmes, livros, cursos, dicas</strong> e tudo que for
+          necessário para tornar esse momento mais interessante.</p>
+        <p>Comece clicando em ver ideias para ver as <a href=""></a> ideias cadastradas e contribua adicionando a sua
+          ideia.
+        </p>
+      </main>
+
+      <section id="buttons">
+
+        <button onclick="onOff()">+ Adicionar Ideia</button>
+        <button class="fat">Ver Ideias</button>
+
+      </section>
+
+      <footer>Com ❤ <a href="http://rocketseat.com.br">Rocketseat</a></footer>
+
+    </section>
+
+    <section id="last-ideas">
+      <div class="idea">
+        <img src="https://image.flaticon.com/icons/svg/2729/2729007.svg" alt="Imagem de Curso de Programação">
+
+        <div class="content">
+          <h3>Cursos de Programação</h3>
+          <p>Estudo</p>
+          <div class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, nobis asperiores? Nemo minima maiores
+            tenetur delectus magnam a aliquid cum accusamus, nisi qui ut, distinctio assumenda sequi iure quas autem!
+          </div>
+          <a href="a">Ir para a Ideia</a>
+        </div>
+      </div>
+
+      <div class="idea">
+        <img src="https://image.flaticon.com/icons/svg/2729/2729005.svg" alt="Exercícios">
+
+        <div class="content">
+          <h3>Exercícios</h3>
+          <p>Saúde</p>
+          <div class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, nobis asperiores? Nemo minima maiores
+            tenetur delectus magnam a aliquid cum accusamus, nisi qui ut, distinctio assumenda sequi iure quas autem!
+          </div>
+          <a href="a">Ir para a Ideia</a>
+        </div>
+      </div>
+
+      <div class="idea">
+        <img src="https://image.flaticon.com/icons/svg/2729/2729027.svg" alt="Exercícios">
+
+        <div class="content">
+          <h3>Meditação</h3>
+          <p>Mentalidade</p>
+          <div class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, nobis asperiores? Nemo minima maiores
+            tenetur delectus magnam a aliquid cum accusamus, nisi qui ut, distinctio assumenda sequi iure quas autem!
+          </div>
+          <a href="a">Ir para a Ideia</a>
+        </div>
+      </div>
+
+    </section>
+
+  </div>
 
 
-  </script>
+  <!-- Modal -->
+
+  <div id="modal" class="hide">
+    <div class="content">
+      <h1>Nova Ideia</h1>
+
+      <form action="">
+
+        <div class="input-wrapper">
+          <label for="title">Título da Ideia</label>
+          <input type="text" name="title">
+        </div>
+
+        <div class="input-wrapper">
+          <label for="category">Categoria</label>
+          <input type="text" name="category">
+        </div>
+
+        <div class="input-wrapper">
+          <label for="image">Link da Imagem</label>
+          <input type="url" name="image">
+        </div>
+
+        <div class="input-wrapper">
+          <label for="description">Digite uma descrição para essa ideia</label>
+          <textarea name="description" cols="30" rows="10"></textarea>
+        </div>
+
+        <div class="input-wrapper">
+          <label for="link">Link da Ideia</label>
+          <input type="url" name="link">
+        </div>
+
+        <a href="#" onclick="onOff()">Voltar</a>
+        <button>Salvar</button>
+
+
+      </form>
+    </div>
+  </div>
+
+
+  <script src="scripts.js"></script>
 </body>
-
 
 </html>
