Criação da página de ideias
Criando a terceira página para mostrar as ideias do site

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <section id="intro">
       <header>
-
-        <img src="logoCasaCriativa.png" alt="Imagem da Logomarca">
-
+        <a href="index.html">
+          <img src="logoCasaCriativa.png" alt="Imagem da Logomarca">
+        </a>
       </header>
 
       <main>
@@ -32,11 +32,11 @@
       <section id="buttons">
 
         <button onclick="onOff()">+ Adicionar Ideia</button>
-        <button class="fat">Ver Ideias</button>
+        <a href="ideias.html" class="button">Ver Ideias</a>
 
       </section>
 
-      <footer>Com ❤ <a href="http://rocketseat.com.br">Rocketseat</a></footer>
+      <footer>Com ❤ <a href="http://rocketseat.com.br" target="_blank">Rocketseat</a></footer>
 
     </section>
 
