--- a/ideias.html
+++ b/ideias.html
@@ -86,7 +86,7 @@
       </section>
     </main>
     <footer>
-      Com ❤ <a href="http://rocketseat.com.br" target="_blank">Rocketseat</a>
+      Com ❤ <a href="http://rocketseat.com.br" target="_blank" rel="noopener noreferrer">Rocketseat</a>
     </footer>
   </div>
 
