--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       </section>
 
-      <footer>Com ❤ <a href="http://rocketseat.com.br" target="_blank">Rocketseat</a></footer>
+      <footer>Com ❤ <a href="http://rocketseat.com.br" target="_blank" rel="noopener noreferrer">Rocketseat</a></footer>
 
     </section>
 
